# ghostbin_rs

./: Cargo.toml  README.md
src/: config.rs  file.rs  languages.rs  main.rs  paste.rs
static/: Ghost.ai  app.css  app.js
templates/: index.html.hbs  paste.html.hbs
