[package]
name = "ghostbin_rs"
version = "0.1.0"
authors = ["Callum Yarnold <callum@yarnold.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.130"
clap = "2.34.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]
